# assistant-sdk-cpp

./: .gitignore  .travis.yml  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.md  appveyor.yml  audio_input.h  audio_input_alsa.h  audio_input_file.cc  audio_input_file.h  cloudbuild.yaml  embedded_assistant.proto  get_credentials.sh  json_util.cc  json_util.h  json_util_test.cc  run_assistant.cc  scope_exit.h
cmake/: build_dependencies.cmake  build_googleapis.cmake  googleapis.cmake  make_uninstall.cmake  target_arch.cmake
resources/: switch_to_channel_5.raw  weather_in_mountain_view.raw
src/: assistant_config.h  audio_input_alsa.cc  audio_input_file.cc  audio_input_file.h  audio_output_alsa.cc  audio_pa.cc  audio_pa.h  base64_encode.cc  base64_encode.h  run_assistant.cc  run_assistant_audio.cc  run_assistant_file.cc  run_assistant_text.cc  service_account_util.cc  service_account_util.h
src/assistant/: assistant_config.h  audio_input.h  audio_input_alsa.cc  audio_input_alsa.h  audio_input_file.cc  audio_input_file.h  audio_output_alsa.cc  audio_output_alsa.h  base64_encode.cc  base64_encode.h  json_util.cc  json_util.h  json_util_test.cc  run_assistant_audio.cc  run_assistant_file.cc  run_assistant_text.cc  scope_exit.h
tests/: build-cb.sh  build.sh  clean-all.sh  integration_audio.sh  integration_audio_file.sh  integration_en_us.sh  integration_fr.sh  lint.sh  test_all.sh
